<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MarkApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Login">Iniciar sesión</string>
    <string name="Register">Registro MarkApp</string>
    <string name="input_name">Nombre</string>
    <string name="input_last_name">Apellido</string>
    <string name="input_nickname">Usuario</string>
    <string name="input_password">Contraseña</string>
    
    <string name="btn_register">Registrarse</string>
    <string name="btn_login">Listo</string>
    <string name="txt_no_user">Registrarse en MarkApp</string>
    <string name="btn_register_new">Crear una</string>
    
    <string-array name="list_categories">
	    <item >Sin Categoría</item>	  
	    <item >Escuela</item>
	    <item >Personal</item>
	    <item >Trabajo</item>
	    <item >Familia</item>	      
	</string-array>
	
	
	<string name="action_add">Agregar Nota</string>
	<string name="action_more">Mas</string>
	<string name="action_info">Información</string>
	<string name="action_about">Acerca De</string>
	<string name="action_rename">Renombrar</string>
	<string name="action_delete">Eliminar</string>
	
	<string name="dialog_edit_title">Título</string>
	<string name="dialog_edit_content">Escriba el contenido</string>
	<string name="dialog_edit_date">Fecha</string>
	
	<string name="btn_ok">Listo</string>
	<string name="btn_edit">Editar</string>
	<string name="icon">Icono</string>
	<string name="txt_category">Categoria: </string>
	
	<string name="type_txt">Nota de texto</string>
	<string name="type_voice">Nota de voz</string>
		
    
    
</resources>



