<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_login_padding"
     >
    
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
		android:layout_gravity="center"
		android:textSize="@dimen/txt_new_user"
		android:layout_marginBottom="@dimen/title_padding_bottom"
		/>
    
    <EditText 
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        />
    <EditText 
        android:id="@+id/txt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_last_name"
        />
    <EditText 
        android:id="@+id/txt_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_nickname"
        />
    <EditText
        android:id="@+id/txt_paswword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        />

    <Button 
        android:id="@+id/btn_register"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_register"
        android:layout_marginTop="@dimen/button_padding_top"
        android:textColor="@color/abc_search_url_text_selected"
        />
    

</LinearLayout>
