<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
   xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    
    <item 
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add"
        android:orderInCategory="101"
        app:showAsAction="always"
        />
    
    <item 
        android:id="@+id/action_more"
        android:title="@string/action_more"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        app:showAsAction="always"
        >
        <menu >
            <item 
                android:id="@+id/action_inf"
                android:title="@string/action_info"
                />
            <item 
                android:id="@+id/action_about"
                android:title="@string/action_about"
                />
            
        </menu>
        
        
    </item>
    
    
    

</menu>
