<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="10dp"
    android:orientation="vertical"
    >
    
    <ImageView 
        android:id="@+id/img_edit"
        android:src="@drawable/ic_action_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon"        
        />
    <TextView
	    android:id="@+id/btn_edit_desc"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_edit" 
	    android:paddingTop="10dp"
	    android:paddingRight="5dp"
	    android:layout_toRightOf="@id/img_edit"
	    />
      
    <EditText 
        android:id="@+id/note_title_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_edit_title"
        android:layout_toRightOf="@id/btn_edit_desc"
        android:focusable="false"
        />
    
    <EditText 
        android:id="@+id/note_content_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="10"
        android:focusable="false"
        android:gravity="top" 
        android:layout_below="@id/note_title_desc"        
        />
   
     <RelativeLayout 
        android:id="@+id/btns_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_title_desc"
        android:padding="@dimen/Rec_btns_padding"
        android:layout_centerInParent="true"                
        >
   	
	<Button
	    android:id="@+id/btn_play_desc"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/ic_action_play_over_video" />
	
	<Button
	    android:id="@+id/btn_pause_desc"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/ic_action_pause_over_video" />
	<Button
	    android:id="@+id/btn_stop_desc"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/ic_action_stop" 
	    android:layout_toRightOf="@id/btn_play_desc"
	    />
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/note_content_desc"
        >
    <fragment
	    android:id="@+id/map_desc"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:name="com.google.android.gms.maps.MapFragment"
		class="com.google.android.gms.maps.SupportMapFragment"
		/>
    </LinearLayout>
    
</RelativeLayout>
